<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.profile_frag">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="330dp"
        android:layout_height="230dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="165dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/handshake"/>



        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/no_of_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/total_projects"
            android:layout_marginStart="30dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="190dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5">

            <ImageView
                android:id="@+id/messege_ic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/messege" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="192dp"
            android:text="@string/messege"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="325dp"
            app:cardCornerRadius="50dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/question_mark_24"/>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="312dp"
            android:text="@string/required"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/ab_crd1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strig"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/ed_tex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/educ"
            android:layout_marginStart="90dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toEndOf="@+id/ab_crd1"/>


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:layout_marginStart="330dp"
        app:srcCompat="@drawable/plus"/>




</FrameLayout>

